--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,8 @@ gen-external-apklibs
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+./idea/misc.xml
+./idea/modules.xml
+./idea/vcs.xml
+
 # End of https://www.gitignore.io/api/kotlin,android
