--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,33 +9,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        //로그인
         <activity android:name=".LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        //가입창
         <activity android:name=".SignUp1Activity" />
         <activity android:name=".SignUp2Activity" />
         <activity android:name=".SignUp3Activity" />
 
+        //보드
         <activity android:name=".BottomNaviActivity"></activity>
 
-        <activity android:name=".UpBoardActivity"
-            android:windowSoftInputMode="adjustResize">
+        <activity
+            android:name=".UpBoardActivity"
+            android:windowSoftInputMode="adjustResize"></activity>
 
-        </activity>
-
+        //투명
         <activity
             android:name=".Seunghee.Activity.CategoryMenuActivity"
-            android:theme="@style/Theme.AppCompat.Translucent" >
+            android:theme="@style/Theme.AppCompat.Translucent">
+
+
+        </activity>
+        <activity android:name=".DetailBoardActivity">
 
         </activity>
 
+        //카테고리 별 보드
+        <activity android:name=".Seunghee.Activity.CategoryBoardActivity">
 
-
-        <activity android:name=".DetailBoardActivity"></activity>
+        </activity>
 
     </application>
 
