--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,44 +11,35 @@
         android:theme="@style/AppTheme">
         <activity android:name=".LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         //가입창
         <activity android:name=".SignUp1Activity" />
         <activity android:name=".SignUp2Activity" />
         <activity android:name=".SignUp3Activity" />
-
         //보드
-        <activity android:name=".BottomNaviActivity"></activity>
-
-        <activity android:name=".UpBoardActivity"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
-        <activity android:name=".DetailBoardActivity"></activity>
-
+        <activity android:name=".BottomNaviActivity" />
+        <activity
+            android:name=".UpBoardActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".DetailBoardActivity" />
         // 라운지
-        <activity android:name=".Hyunjin.Activity.LoungeIntroduceActivity"></activity>
-
-
+        <activity android:name=".Hyunjin.Activity.LoungeIntroduceActivity" />
         //투명
         <activity
             android:name=".Seunghee.Activity.CategoryMenuActivity"
-            android:theme="@style/Theme.AppCompat.Translucent">
-
-
-        </activity>
-        <activity android:name=".DetailBoardActivity">
-
-        </activity>
-
+            android:theme="@style/Theme.AppCompat.Translucent" />
         //카테고리 별 보드
-        <activity android:name=".Seunghee.Activity.CategoryBoardActivity">
-
-        </activity>
-
+        <activity android:name=".Seunghee.Activity.CategoryBoardActivity" />
+        <activity android:name=".Hyunjin.Activity.MessageSend1Activity" />
+        <activity android:name=".Seunghee.Activity.ProfileInfoUpdateActivity" />
+        <activity android:name=".Jemin.Activity.MypageUpdateActivity" />
+        <activity android:name=".Jemin.Activity.PasswdModifyActivity" />
+        <activity android:name=".Jemin.Activity.PasswordConfirmActivity" />
+        <activity android:name=".Jemin.Activity.UnsubscribeActivity"></activity>
     </application>
+
 </manifest>
