--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,20 +7,15 @@
     <application
         android:name=".Network.ApplicationController"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_gings"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon_gings"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <!-- 로그인/가입창 -->
         //로그인 시작
         <activity android:name=".Moohyeon.Activity.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         //가입창
         <activity android:name=".Moohyeon.Activity.SignUp1Activity" />
@@ -78,7 +73,14 @@
         <activity android:name=".Jemin.Activity.UnsubscribeActivity" />
         <activity android:name=".Jemin.Activity.MainActivity" />
         <activity android:name=".Jemin.Activity.TestActivity" />
-        <activity android:name=".Jemin.Activity.Test2Activity"></activity>
+        <activity android:name=".Jemin.Activity.Test2Activity" />
+        <activity android:name=".Jemin.Activity.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
