--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     compile 'gun0912.ted:tedbottompicker:1.1.0'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
 }
