--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     compile 'gun0912.ted:tedbottompicker:1.1.0'
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    compile 'com.kakao.sdk:kakaolink:1.15.1'
 }
