--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.computer.inu.myworkinggings">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEVIVE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:name=".Network.ApplicationController"
@@ -12,6 +14,31 @@
         android:roundIcon="@drawable/icon_gings"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--fcm을 받았을 때 동작하기 위한 리시버-->
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name = "com.google.android.c2dm.intent.RECEIVE"/>
+                <category android:name="net.saltfactory.demo.gcm"/>
+            </intent-filter>
+        </receiver>
+
+        <!-- fcm 요청을 대기하고 있는 리스너 서비스 -->
+        <service
+            android:name=".Firebase.FirebaseInstanceIDService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID" />
+            </intent-filter>
+        </service>
+        <service android:name=".Firebase.FirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <!-- 로그인/가입창 -->
         //로그인 시작
