--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.computer.inu.myworkinggings"
-        minSdkVersion 26
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -23,6 +25,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3@aar'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -34,10 +39,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'gun0912.ted:tedbottompicker:1.1.0'
-    compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    implementation 'gun0912.ted:tedbottompicker:1.1.0'
+    implementation 'com.android.support:support-core-ui:28.0.0'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+
 }
