--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.airbnb.android:lottie:2.3.0'
     compile 'com.kakao.sdk:kakaolink:1.15.1'
+    compile 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
