--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,7 @@
         </activity>
 
         <activity android:name=".Jemin.Activity.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
 
@@ -108,7 +104,13 @@
         <activity android:name=".Jemin.Activity.PasswdModifyActivity" />
         <activity android:name=".Jemin.Activity.PasswordConfirmActivity" />
         <activity android:name=".Jemin.Activity.UnsubscribeActivity" />
-        <activity android:name=".Jemin.Activity.MainActivity" />
+        <activity android:name=".Jemin.Activity.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Jemin.Activity.TestActivity" />
         <activity android:name=".Jemin.Activity.Test2Activity" />
 
@@ -120,24 +122,6 @@
         <activity android:name=".Jemin.Activity.ChatActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"
             />
-        <!-- FCM 관련 서비스 -->
-        <service
-            android:name=".Jemin.Firebase.FireBaseMessagingService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-        <service
-            android:name=".Jemin.Firebase.FirebaseInstanceIDService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-            </intent-filter>
-        </service>
-        <!-- 여기까지 -->
 
     </application>
 
