--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+
         android:name=".Network.ApplicationController"
         android:allowBackup="true"
         android:icon="@drawable/invalid_name"
@@ -17,8 +18,14 @@
 
         //카카오링크
         <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="@string/kakao_app_key" />
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id"/>
+
+        <meta-data android:name="firebase_messaging_auto_init_enabled"
+            android:value="false" />
+
+        <meta-data android:name="firebase_analytics_collection_enabled"
+            android:value="false" />
         //카카오스플레시
         <activity android:name=".Seunghee.Activity.KakaoSplashActivity">
             //카카오링크 실행
@@ -109,6 +116,7 @@
         <activity android:name=".Jemin.Activity.TestActivity">
 
         </activity>
+
         <activity android:name=".Jemin.Activity.Test2Activity">
 
         </activity>
@@ -133,6 +141,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
+
         <!-- 여기까지 -->
 
     </application>
