--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
     <application
         android:name=".Network.ApplicationController"
         android:allowBackup="true"
-        android:icon="@drawable/invalid_name"
+        android:icon="@drawable/gings_app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/invalid_name"
+        android:roundIcon="@drawable/gings_app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         //카카오링크
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -42,7 +41,7 @@
         </activity>
 
         <!-- 로그인/가입창 -->
-        <activity android:name=".Moohyeon.Activity.LoginActivity"></activity>
+        <activity android:name=".Moohyeon.Activity.LoginActivity" />
         //가입창
         <activity android:name=".Moohyeon.Activity.SignUp1Activity" />
         <activity android:name=".Moohyeon.Activity.SignUp2Activity" />
@@ -103,31 +102,25 @@
         <activity android:name=".Jemin.Activity.PasswdModifyActivity" />
         <activity android:name=".Jemin.Activity.PasswordConfirmActivity" />
         <activity android:name=".Jemin.Activity.UnsubscribeActivity" />
-        <activity android:name=".Jemin.Activity.MainActivity">
-
-        </activity>
-        <activity android:name=".Jemin.Activity.TestActivity">
-
-        </activity>
+        <activity android:name=".Jemin.Activity.MainActivity"></activity>
+        <activity android:name=".Jemin.Activity.TestActivity"></activity>
         <activity
             android:name=".Jemin.Activity.ReboardMoreBtnMineActivity"
             android:theme="@style/Theme.AppCompat.Translucent" />
         <activity
             android:name=".Jemin.Activity.ChatActivity"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-        <activity android:name=".Jemin.Activity.GuestboardWriteActivity"></activity>
+        <activity android:name=".Jemin.Activity.GuestboardWriteActivity" />
 
         <!-- FCM 관련 서비스 -->
-        <service
-            android:name=".Moohyeon.Firebase.MyFirebaseInstanceIDService">
+        <service android:name=".Moohyeon.Firebase.MyFirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service
-            android:name=".Moohyeon.Firebase.MyFirebaseMessagingService">
+        <service android:name=".Moohyeon.Firebase.MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <!-- 여기까지 -->
