--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,16 @@
         android:theme="@style/AppTheme">
         //카카오링크
         <meta-data
-            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:name="com.google.firebase.messaging.default_notification_cFhannel_id"
             android:value="@string/default_notification_channel_id"/>
 
         <meta-data android:name="firebase_messaging_auto_init_enabled"
             android:value="false" />
 
-        <meta-data android:name="firebase_analytics_collection_enabled"
-            android:value="false" />
+        //카카오링크
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key" />
         //카카오스플레시
         <activity android:name=".Seunghee.Activity.KakaoSplashActivity">
             //카카오링크 실행
